# evolverx

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
examples/: example_usage.py
src/evolverx/: __init__.py  evolving.py  llm.py  persist.py  sandbox.py  telemetry.py  types.py
