[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolverx"
version = "0.1.1"
description = "Self‑evolving decorator: fall back to LLM on failure, then persist clean Python for the happy path."
readme = "README.md"
authors = [{ name = "Vladimir Ponomarev", email = "vorba.dev@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "typing-extensions>=4.9.0",
  "openai>=1.40,<2.0",
]
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
evolverx = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
evolverx = "evolverx:_main_cli"